Fix uneven padding

--- a/src/components/css/schedule_element.module.css
+++ b/src/components/css/schedule_element.module.css
@@ -1,7 +1,7 @@
 .bigrow
 {
-    padding-bottom: 10px;
-    padding-top: 20px;
+    padding-bottom: 16px;
+    padding-top: 16px;
     font-family: 'Proxima Nova';
 }
 
